<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/dialogContent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog_edit_comment"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/dialog_edit_tv_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect_transparent"
            android:padding="@dimen/margin_big"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary" />

        <View
            android:id="@+id/view_line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/dialog_edit_tv_comment"
            android:layout_marginTop="3dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/dialog_edit_et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line_1"
            android:background="@android:color/transparent"
            android:padding="@dimen/margin_big"
            android:paddingLeft="@dimen/margin_small"
            android:text="@string/would_you_like_to_download_it"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_text_size" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/dialog_edit_et_comment"
            android:layout_marginTop="@dimen/margin_big"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/view_line"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_download_bt_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_transparent"
                android:gravity="center"
                android:text="@string/string_ok"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/dialog_download_bt_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_transparent"
                android:gravity="center"
                android:text="@string/string_cancel"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>

